infra/k8s/backend-manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  labels:
    app: backend
  namespace: devops-project
spec:
  replicas: 1

  revisionHistoryLimit: 3

  selector:
    matchLabels:
      app: backend

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  template:
    metadata:
      labels:
        app: backend

    spec:
      automountServiceAccountToken: false
      serviceAccountName: backend-sa

      nodeSelector:
        iam.gke.io/gke-metadata-server-enabled: "true"


      securityContext:
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: backend
          image: me-central1-docker.pkg.dev/devops-gke-project-510307/devops-repo/devops-backend:07d818acad629f6f3b1b8827ee20f310ff1e0c71
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
              
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"

          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL

          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3

          terminationMessagePolicy: File

          volumeMounts:
            - name: secrets-volume
              mountPath: /var/secrets
              readOnly: true

      volumes:
        - name: secrets-volume
          csi:
            driver: secrets-store-gke.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: backend-secrets
