infra/k8s/backend-manifests/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend
  labels:
    app: backend

spec:
  type: ClusterIP

  selector:
    app: backend

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
